Fix: unintentional gap below the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ header {
 /* ----- FOOTER -----  */
 
 footer {
-  margin: 5vh;
+  margin-top: 5vh;
   border-top: solid 3px #c0e9f7;
   background-color: #c0e9f7; 
 
